namespace TicTacToe.Types;

public enum PlayerType
{
    MachinePlayer,
    UserPlayer
}
